--- a/scss/layout/_artist.scss
+++ b/scss/layout/_artist.scss
@@ -71,6 +71,9 @@
 			width: 100%;
 		}
 	}
+	.borderless {
+		border: none;
+	}
 	// &:hover {
 	// 	box-shadow: 0 5px 10px rgba(34, 25, 25, 0.8);
 	// }
