--- a/css/styles.css
+++ b/css/styles.css
@@ -436,6 +436,9 @@ th {
   bottom: 0;
   right: 0; }
 
+.borderless {
+  border: none; }
+
 .back-to-top {
   position: fixed;
   right: 30px;
@@ -781,7 +784,7 @@ body {
       overflow: hidden;
       width: 100%;
       height: 100%;
-      border: 3px solid white;
+      border: 3px solid #333;
       position: relative; }
       .artists-content-block .index-artist-block a:before {
         display: block;
@@ -1200,6 +1203,8 @@ body {
     z-index: 2; }
     .artist-gallery a img {
       width: 100%; }
+  .artist-gallery .borderless {
+    border: none; }
 
 .artist-video {
   margin-bottom: 50px; }
