--- a/jade/artist.jade
+++ b/jade/artist.jade
@@ -12,6 +12,14 @@ html.no-js
 		meta(property='og:url', content='')
 		meta(property='og:image', content='')
 		meta(property='og:description', content='')
+		<link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="fav/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="fav/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="fav/manifest.json">
+		<link rel="mask-icon" href="fav/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="apple-mobile-web-app-title" content="POW! WOW!">
+		<meta name="application-name" content="POW! WOW!">
+		<meta name="theme-color" content="#ffffff">
 		script(src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry&v=3.22&key=AIzaSyC_kLitJTrG9CrohPBaoPDu15qjBu7F1Lg")
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js')
 		script(src='js/foundation.js')
@@ -239,7 +247,7 @@ html.no-js
 						- var item = ['colasa-painting']
 							- for (var i=0; i<10; i++)
 								.artist-gallery.revealer
-									a(href="img/"+ item + i + ".jpg", data-lightbox="lightbox"): img(src="img/" + item + i + ".jpg")
+									a.borderless(href="img/"+ item + i + ".jpg", data-lightbox="lightbox"): img(src="img/" + item + i + ".jpg")
 									.card-bg-fix
 					.clearfix
 				.artist-video.revealer
