--- a/jade/index.jade
+++ b/jade/index.jade
@@ -12,6 +12,14 @@ html.no-js
 		meta(property='og:url', content='')
 		meta(property='og:image', content='')
 		meta(property='og:description', content='')
+		<link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="fav/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="fav/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="fav/manifest.json">
+		<link rel="mask-icon" href="fav/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="apple-mobile-web-app-title" content="POW! WOW!">
+		<meta name="application-name" content="POW! WOW!">
+		<meta name="theme-color" content="#ffffff">
 		script(src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry&v=3.22&key=AIzaSyC_kLitJTrG9CrohPBaoPDu15qjBu7F1Lg")
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js')
 		script(src='js/foundation.js')
@@ -21,7 +29,6 @@ html.no-js
 		script(src='js/maplace.js')
 		script(src='js/markerclusterer.js')
 		script(src='js/barba.min.js')
-		script(src='js/jquery.youtubebackground.js')
 		script(src='js/jquery.grid-a-licious.js')
 		script(src='js/scrollTo.js')
 		link(rel='stylesheet', href='font/aller.css')
@@ -216,10 +223,7 @@ html.no-js
 				[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el){	
 					new SelectFx(el);
 				});
-				$('#video').YTPlayer({
-				    fitToBackground: true,
-				    videoId: 'QAIw9Lf3320'
-				});
+
 				
 				//- BackgroundCheck.init({
 				//- 	targets: '.panel-content',
@@ -501,8 +505,6 @@ html.no-js
 			//- .banner(style="background-image: url(img/banner2.jpg);")
 			.content
 				.overlay-wrap
-					.index-video-wrap
-						#video
 					.banner-slogan
 						//- img(src="img/bannerlogo.svg")
 						.video-space
