--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -15,7 +15,7 @@
 			overflow: hidden;
 			width: 100%;
 			height: 100%;
-			border: 3px solid white;
+			border: 3px solid #333;
 			@include aspect-ratio(16, 9);
 			.i-artist-thumb {
 				background-position: center center;
