--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,9 @@ th {
 .p-bottom-50 {
   padding-bottom: 50px; }
 
+.padding-50 {
+  padding-top: 50px; }
+
 .row {
   max-width: 100%; }
 
@@ -438,6 +441,22 @@ th {
 
 .borderless {
   border: none; }
+
+.google-maps {
+  position: relative;
+  padding-bottom: 50%;
+  height: 0;
+  overflow: hidden; }
+  .google-maps iframe {
+    display: block;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important; }
+  .google-maps iframe.clicked {
+    pointer-events: auto; }
 
 .back-to-top {
   position: fixed;
@@ -1171,17 +1190,6 @@ body {
         .artist-des .artist-des-right-col .artist-social a:hover {
           color: #333; }
 
-#particles-js {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1; }
-  #particles-js canvas {
-    position: absolute;
-    top: 0; }
-
 .artist-gallery {
   position: relative;
   display: inline-block;
@@ -1223,13 +1231,19 @@ body {
     right: 0;
     bottom: 0; }
 
+.index-sec h3 {
+  text-align: center;
+  margin: 60px 0 70px;
+  font-weight: bold;
+  text-transform: uppercase; }
+
 .event-list-wrapper, .fes-list-wrapper {
   min-height: 100%;
   position: relative;
   top: 0;
   padding-bottom: 510px;
   overflow: auto;
-  background: white; }
+  background: #f7f7f7; }
   .event-list-wrapper .events-wrap, .fes-list-wrapper .events-wrap {
     background-color: inherit;
     bottom: 0;
@@ -2223,7 +2237,7 @@ div.cs-skin-underline {
     margin-top: 30px; }
   .banner-slogan .artist-slogan {
     color: #333;
-    text-shadow: 0 1px 0 #333, 0 2px 0 #888, 0 3px 0 #999, 0 4px 0 #aaa, 0 5px 0 #bbb, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15); }
+    text-shadow: 0 1px 0 #333; }
   .banner-slogan p {
     color: white;
     text-transform: uppercase;
@@ -2231,7 +2245,7 @@ div.cs-skin-underline {
     margin-top: 10%;
     letter-spacing: 2px;
     font-weight: bold;
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15); }
+    text-shadow: 0 1px 0 #333; }
   .banner-slogan .page-sub-slogan {
     margin-top: 5%; }
 
@@ -2430,170 +2444,45 @@ div.cs-skin-underline {
 .loader-bg {
   z-index: 999999; }
 
-.circle {
-  width: 186px;
-  height: 186px;
-  border: 10px inset #f28585;
-  display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-left: -97px;
-  margin-top: -97px;
-  border-radius: 200px;
-  -moz-animation: rotate 5s infinitelinear;
-  -webkit-animation: rotate 5s infinite linear;
-  animation: rotate 5s infinite linear;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); }
+.spinner {
+  top: 49%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 70px;
+  text-align: center;
+  position: fixed; }
 
-.circle-small {
-  width: 150px;
-  height: 150px;
-  border: 6px outset #f28585;
-  display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-left: -79px;
-  margin-top: -79px;
-  border-radius: 156px;
-  -moz-animation: rotate-rev 3s infinite linear;
-  -webkit-animation: rotate-rev 3s infinite linear;
-  animation: rotate-rev 3s infinite linear;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); }
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both; }
 
-.circle-big {
-  width: 210px;
-  height: 210px;
-  border: 4px dotted #f28585;
-  display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-left: -109px;
-  margin-top: -109px;
-  border-radius: 214px;
-  -moz-animation: rotate-rev 10s infinite linear;
-  -webkit-animation: rotate-rev 10s infinite linear;
-  animation: rotate-rev 10s infinite linear; }
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s; }
 
-.circle-inner {
-  width: 80px;
-  height: 80px;
-  background-color: #f28585;
-  display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-left: -45px;
-  margin-top: -45px;
-  border-radius: 80px;
-  -moz-animation: pulse 1.5s infinite ease-in;
-  -webkit-animation: pulse 1.5s infinite ease-in;
-  animation: pulse 1.5s infinite ease-in;
-  opacity: 1;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); }
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s; }
 
-.circle-inner-inner {
-  width: 100px;
-  height: 100px;
-  background-color: #864949;
-  display: block;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-left: -55px;
-  margin-top: -55px;
-  border-radius: 100px;
-  -moz-animation: pulse 1.5s infinite ease-in;
-  -webkit-animation: pulse 1.5s infinite ease-in;
-  animation: pulse 1.5s infinite ease-in;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); }
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1); } }
 
-/*==============ANIMATIONS=================*/
-/*==============ROTATE=====================*/
-@-moz-keyframes rotate {
-  0% {
-    -moz-transform: rotate(0deg); }
-  100% {
-    -moz-transform: rotate(360deg); } }
-
-@-webkit-keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(360deg); } }
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-
-/*==============ROTATE-REV=================*/
-@-moz-keyframes rotate-rev {
-  0% {
-    -moz-transform: rotate(0deg); }
-  100% {
-    -moz-transform: rotate(-360deg); } }
-
-@-webkit-keyframes rotate-rev {
-  0% {
-    -webkit-transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(-360deg); } }
-
-@keyframes rotate-rev {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(-360deg); } }
-
-/*==============PULSE======================*/
-@-moz-keyframes pulse {
-  0% {
-    -moz-transform: scale(0.1);
-    opacity: 0.2; }
-  50% {
-    -moz-transform: scale(1);
-    opacity: 0.8; }
-  100% {
-    -moz-transform: scale(0.1);
-    opacity: 0.2; } }
-
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-transform: scale(0.1);
-    opacity: 0.2; }
-  50% {
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  40% {
     -webkit-transform: scale(1);
-    opacity: 0.8; }
-  100% {
-    -webkit-transform: scale(0.1);
-    opacity: 0.2; } }
-
-@keyframes pulse {
-  0% {
-    transform: scale(0.1);
-    opacity: 0.2; }
-  50% {
-    transform: scale(1);
-    opacity: 0.8; }
-  100% {
-    transform: scale(0.1);
-    opacity: 0.2; } }
-
-@keyframes hide {
-  0% {
-    opacity: 1; }
-  100% {
-    opacity: 0; } }
-
-@keyframes hide-all {
-  0% {
-    opacity: 1; }
-  100% {
-    opacity: 0; } }
+    transform: scale(1); } }
 
 @media only screen and (min-width: 1600px) {
   .pin-block {
