--- a/jade/component/footer.jade
+++ b/jade/component/footer.jade
@@ -7,11 +7,11 @@
 				p POW! WOW! TAIWAN!
 		.medium-6.small-12.columns.footer-nav-block
 			.footer-nav
-				- var list = [{ name : 'Home', data : 'index.html'}, { name : 'News', data : '#' }, { name : 'Murals', data : 'mural-list.html' },{ name : 'Music', data : '#' },{ name : 'Event', data : 'event-list.html' },{ name : 'Channel', data : '#' }]
+				- var list = [{ name : 'Home', data : 'index.html'}, { name : 'News', data : '#' }, { name : 'Murals', data : 'mural-list.html' },{ name : 'Event', data : 'event-list.html' }]
 						each item in list
 							div: a(href=item.data).linkFade=item.name
 			.footer-nav
-				- var list = [{ name : 'Participants', data : 'participants.html'}, { name : 'Profiles', data : '#' }, { name : 'Location', data : 'location.html' },{ name : 'About', data : '#' },{ name : 'Member Profile', data : '#' }]
+				- var list = [{ name : 'Participants', data : 'participants.html'}, { name : 'Location', data : 'location.html' },{ name : 'About', data : '#' }]
 						each item in list
 							div: a(href=item.data).linkFade=item.name
 		.medium-3.small-12.columns
@@ -21,7 +21,3 @@
 					- var list = [{ name : 'Facebook', data : '# '}, { name : 'Instagram', data : '#' }, { name : 'Pinterest', data : '#' }, { name : 'Youtube', data : '#'}]
 							each item in list
 								div: a(href=item.data).linkFade=item.name
-	.lang-select-box
-		select.cs-select.lang-select.cs-skin-underline
-			option(selected="selected", value="eng") Eng
-			option(value="chi") Chi
