--- a/scss/layout/_events.scss
+++ b/scss/layout/_events.scss
@@ -5,7 +5,7 @@
 	top: 0;
 	padding-bottom: 510px;
 	overflow: auto;
-	background: white;
+	background: #f7f7f7;
 	.events-wrap {
 		background-color: inherit;
 	    bottom: 0;
