--- a/css/styles.css
+++ b/css/styles.css
@@ -998,9 +998,13 @@ body {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease; }
 
+.mural-panel {
+  margin-top: 15px; }
+
 .panel-column {
   margin-bottom: 30px; }
   .panel-column a {
+    background-color: #333;
     display: block;
     overflow: hidden;
     width: 100%;
@@ -1025,6 +1029,8 @@ body {
       height: 100%;
       width: 100%;
       overflow: hidden;
+      display: flex;
+      justify-content: center;
       -moz-transition: all 0.3s;
       -o-transition: all 0.3s;
       -webkit-transition: all 0.3s;
@@ -1058,20 +1064,28 @@ body {
         -o-transition: all 0.3s;
         -webkit-transition: all 0.3s;
         transition: all 0.3s; }
-      .panel-column a .i-artist-thumb p {
+      .panel-column a .i-artist-thumb .artist-name-cat {
         position: relative;
-        text-align: center;
-        font-size: 2em;
-        color: white;
-        text-transform: uppercase;
-        font-weight: bolder;
-        z-index: 5;
-        padding: 0 0.9375em;
-        top: 50%;
-        transform: translateY(-50%);
-        -webkit-transform: translateY(-50%);
-        -moz-transform: translateY(-50%);
-        -o-transform: translateY(-50%); }
+        align-self: center;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        -webkit-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+        width: 100%; }
+        .panel-column a .i-artist-thumb .artist-name-cat p {
+          text-align: center;
+          font-size: 2em;
+          color: white;
+          text-transform: uppercase;
+          font-weight: bolder;
+          z-index: 5;
+          padding: 0 0.9375em;
+          margin-bottom: 0; }
+        .panel-column a .i-artist-thumb .artist-name-cat .underline {
+          height: 2px;
+          width: 80%;
+          background: white;
+          margin: 5px auto; }
     .panel-column a:hover .i-artist-thumb {
       transform: scale(1.1); }
       .panel-column a:hover .i-artist-thumb:after {
@@ -1080,6 +1094,8 @@ body {
         right: 5.5%;
         bottom: 7%;
         opacity: 1; }
+      .panel-column a:hover .i-artist-thumb .artist-name-cat {
+        transform: scale(0.9); }
     .panel-column a:hover .i-artist-overlay {
       opacity: 0.75; }
 
