--- a/jade/mural-list.jade
+++ b/jade/mural-list.jade
@@ -309,84 +309,45 @@ html.no-js
 						.banner-button.arrow-down: a#contentlink(href="#") SEE MURALS
 				a#content(href="#")
 				.index-block.index-mural.padding-top-120.padding-column#barba-wrapper
+					.filter-wrap
+						.filter-outer-box
+							span.filter-label Filter
+							.filter-box
+								select.cs-select.filter-select.cs-skin-underline
+									option(selected, disabled) Choose Filter
+									option(value="none") None
+									option(value="2016") 2016
+									option(calue="2015") 2015
+									option(value="2014") 2014
+									option(value="2013") 2013
+									option(value="2012") 2012
+									option(value="2011") 2011
+									option(value="2010") 2010
+									
+						.filter-outer-box
+							span.filter-label Arrange
+							.arrange-box
+								select.cs-select.filter-select.cs-skin-underline
+									option(selected, disabled) Choose Filter
+									option(value="newest") Newest
+									option(value="oldest") Oldest
+									option(value="az") A-Z
+									option(value="za") Z-A
+						.filter-submit 
+							button APPLY
 					.barba-container
-						.mural-panel
-							.sticky-header 2016
-							.panel-content.row
-								- var list = [{ name : "POWWOW LONG BEACH", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/20160712-DSC02981.jpg" }, { name : "POWWOW DC", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Persue-Yok-Sheryo-5-26-FS-1.jpg" },{ name : "POWWOW SXSW", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/day5_fafi_kamea_gress.jpg" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/usugrow-20160214.jpg" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Telmo-Miel.jpg" }]
-										each item in list
-											.medium-3.small-12.columns.panel-column.end.safari_only
-												a(href="mural-tab1.html")
-													.ratio-hack
-														div.i-artist-thumb(style="background-image: url("+item.data+");")
-															div.i-artist-overlay
-															p=item.name
-						.mural-panel
-							.sticky-header 2015
-							.panel-content.row
-								- var list = [{ name : "POWWOW TAIWAN", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/DSC09144.jpg" }, { name : "POWWOW JAPAN", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/DSC05508.jpg" },{ name : "POWWOW LONG BEACH", data : "http://powwowhawaii.com/wp-content/uploads/2015/07/2-1277x848.jpg" },{ name : "POWWOW SXSW", data : "http://powwowhawaii.com/wp-content/uploads/2015/04/pw-sxsw-3-1277x848.jpg" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2015/03/olek-1-1277x848.jpg" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Andrew-Hem-Yoskay-Yamamoto-Edwin-Ushiro.jpg" }]
-										each item in list
-											.medium-3.small-12.columns.panel-column.end.safari_only
-												a(href="mural-tab2.html")
-													.ratio-hack
-														div.i-artist-thumb(style="background-image: url("+item.data+");")
-															div.i-artist-overlay
-															p=item.name
-						.mural-panel
-							.sticky-header 2014
-							.panel-content.row
-								- var list = [{ name : "POWWOW TAIWAN", data : "http://powwowhawaii.com/wp-content/uploads/2014/04/pwtw_process_18-1277x848.jpg" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2014/03/7K9A0020-3-1277x848.jpg" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Aaron-Li-Hill.jpg" }]
-										each item in list
-											.medium-3.small-12.columns.panel-column.end.safari_only
-												a(href="mural-tab3.html")
-													.ratio-hack
-														div.i-artist-thumb(style="background-image: url("+item.data+");")
-															div.i-artist-overlay
-															p=item.name
-						.mural-panel
-							.sticky-header 2013
-							.panel-content.row
-								- var list = [{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/7K9A0019-1277x848.jpg" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Defer.jpg" }]
-										each item in list
-											.medium-3.small-12.columns.panel-column.end.safari_only
-												a(href="mural-tab2.html")
-													.ratio-hack
-														div.i-artist-thumb(style="background-image: url("+item.data+");")
-															div.i-artist-overlay
-															p=item.name
-						.mural-panel
-							.sticky-header 2012
-							.panel-content.row
-								- var list = [{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/DSC02060-1277x848.jpg" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Sket-One.jpg" }]
-										each item in list
-											.medium-3.small-12.columns.panel-column.end.safari_only
-												a(href="mural-tab2.html")
-													.ratio-hack
-														div.i-artist-thumb(style="background-image: url("+item.data+");")
-															div.i-artist-overlay
-															p=item.name
-						.mural-panel
-							.sticky-header 2011
-							.panel-content.row
-								- var list = [{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/IMG_0003-1277x848.jpg" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/The-Draculas-01.jpg" }]
-										each item in list
-											.medium-3.small-12.columns.panel-column.end.safari_only
-												a(href="mural-tab2.html")
-													.ratio-hack
-														div.i-artist-thumb(style="background-image: url("+item.data+");")
-															div.i-artist-overlay
-															p=item.name
-						.mural-panel
-							.sticky-header 2010
-							.panel-content.row
-								- var list = [{ name : "POWWOW HONG KONG", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/artist_01-1277x848.jpg" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Persue-Yok-Sheryo-6-21-Final-1.jpg" }]
-										each item in list
-											.medium-3.small-12.columns.panel-column.end.safari_only
-												a(href="mural-tab2.html")
-													.ratio-hack
-														div.i-artist-thumb(style="background-image: url("+item.data+");")
-															div.i-artist-overlay
-															p=item.name
+						.mural-panel.row
+							- var list = [{ name : "POWWOW LONG BEACH", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/20160712-DSC02981.jpg", date : "2016" }, { name : "POWWOW DC", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Persue-Yok-Sheryo-5-26-FS-1.jpg", date : "2016" },{ name : "POWWOW SXSW", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/day5_fafi_kamea_gress.jpg", date : "2016" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/usugrow-20160214.jpg", date : "2016" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Telmo-Miel.jpg", date : "2016" },{ name : "POWWOW TAIWAN", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/DSC09144.jpg", date : "2016" }, { name : "POWWOW JAPAN", data : "http://powwowhawaii.com/wp-content/uploads/2016/03/DSC05508.jpg", date : "2016" },{ name : "POWWOW LONG BEACH", data : "http://powwowhawaii.com/wp-content/uploads/2015/07/2-1277x848.jpg", date : "2015" },{ name : "POWWOW SXSW", data : "http://powwowhawaii.com/wp-content/uploads/2015/04/pw-sxsw-3-1277x848.jpg", date : "2015" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2015/03/olek-1-1277x848.jpg", date : "2015" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Andrew-Hem-Yoskay-Yamamoto-Edwin-Ushiro.jpg", date : "2015" },{ name : "POWWOW TAIWAN", data : "http://powwowhawaii.com/wp-content/uploads/2014/04/pwtw_process_18-1277x848.jpg", date : "2014" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2014/03/7K9A0020-3-1277x848.jpg", date : "2014" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Aaron-Li-Hill.jpg", date : "2014" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/7K9A0019-1277x848.jpg", date : "2013" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Defer.jpg", date : "2013" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/DSC02060-1277x848.jpg", date : "2012" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/Sket-One.jpg", date : "2012" },{ name : "POWWOW HAWAII", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/IMG_0003-1277x848.jpg", date : "2011" },{ name : "OTHER", data : "http://powwowhawaii.com/wp-content/uploads/2016/07/The-Draculas-01.jpg", date : "2011" },{ name : "POWWOW HONG KONG", data : "http://powwowhawaii.com/wp-content/uploads/2013/05/artist_01-1277x848.jpg", date : "2010" }]
+								each item in list
+									.medium-4.small-12.columns.panel-column.end.safari_only
+										a(href="mural-tab1.html")
+											.ratio-hack
+												div.i-artist-thumb(style="background-image: url("+item.data+");")
+													.i-artist-overlay
+													.artist-name-cat
+														p=item.name
+														p.underline
+														p=item.date
 			include component/footer.jade
 			a.back-to-top.ripple(href="#") TOP
 		script.
