--- a/jade/component/header.jade
+++ b/jade/component/header.jade
@@ -3,19 +3,19 @@
 		a(href="index.html").linkFade: img(src="img/powwowlogo.png")
 	.medium-10.columns.header-nav.mobile-hide
 		.row
-			- var list = [{ name : 'MURALS', data : 'mural-list.html' },{ name : 'EVENTS', data : 'event-list.html' },{ name : 'PARTICIPANTS', data : 'participants.html' },{ name : 'LOCATION', data : 'location.html' }]
+			- var list = [{ name : 'MURALS', data : 'mural-list.html' },{ name : 'FESTIVALS', data : 'event-list.html' },{ name : 'PARTICIPANTS', data : 'participants.html' },{ name : 'LOCATION', data : 'location.html' }]
 				each item in list
 					.medium-3.columns: a(href=item.data).linkFade= item.name
-				//- .2.columns 
-				//- 	.lang-select-box
-				//- 		select.cs-select.lang-select.cs-skin-underline
-				//- 			option(selected="selected", value="eng") Eng
-				//- 			option(value="chi") Chi 
 	.medium-1.columns.header-menu.mobile-fix
 		div 
 			span.menu-button
 				button.lines-button.x(type="button", role="button", aria-label="Toggle Navigation")
-					span.lines
+					span.lines 
+	div.lang-box-wrapper
+		.lang-select-box
+			select.cs-select.lang-select.cs-skin-underline
+				option(selected="selected", value="eng") Eng
+				option(value="chi") Chi
 .screen-menu.sm-overlay
 	span.menu-button
 		button.lines-button.x(type="button", role="button", aria-label="Toggle Navigation")
@@ -27,6 +27,6 @@
 				input.search-textfield(type="text", name="search", placeholder="What're we looking for?")
 				//- input.search-submit(value="", type="submit")
 		.sm-menu.row
-			- var list = [{ name : 'NEWS', data : '#' }, { name : 'MURALS', data : 'mural-list.html' },{ name : 'EVENT', data : 'activities.html' },{ name : 'PARTICIPANTS', data : 'participants.html' },{ name : 'PROFILES', data : '#' },{ name : 'LOCATION', data : 'location.html' },{ name : 'ABOUT', data : '#' },{ name : 'MEMBER PROFILE', data : '#' },]
+			- var list = [{name: 'HOME', data: 'index.html'}, { name : 'MURALS', data : 'mural-list.html' },{ name : 'FESTIVALS', data : 'activities.html' },{ name : 'PARTICIPANTS', data : 'participants.html' },{ name : 'LOCATION', data : 'location.html' },{ name : 'ABOUT', data : 'about.html' }]
 				each item in list
-					.medium-6.small-12.columns: a(href=item.data).linkFade=item.name
+					.small-12.columns: a(href=item.data).linkFade=item.name
