--- a/jade/mural-tab1.jade
+++ b/jade/mural-tab1.jade
@@ -239,12 +239,11 @@ html.no-js
 
 			});
 	body
-		.loader
-			.circle
-			.circle-small
-			.circle-big
-			.circle-inner-inner
-			.circle-inner
+		.loader-bg
+			.spinner
+				.bounce1
+				.bounce2
+				.bounce3
 		.wrapper
 			include component/header.jade
 			.content
