--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,7 @@
 @import "layout/mural";
 @import "layout/artist";
 @import "layout/events";
+@import "layout/about";
 
 @import "module/button";
 @import "module/textfield";
