--- a/jade/artist.jade
+++ b/jade/artist.jade
@@ -217,12 +217,11 @@ html.no-js
 				}
 			});
 	body
-		.loader
-			.circle
-			.circle-small
-			.circle-big
-			.circle-inner-inner
-			.circle-inner
+		.loader-bg
+			.spinner
+				.bounce1
+				.bounce2
+				.bounce3
 		.wrapper
 			include component/header.jade
 			.content.padding-column
