--- a/jade/component/footer.jade
+++ b/jade/component/footer.jade
@@ -7,13 +7,13 @@
 				p POW! WOW! TAIWAN!
 		.medium-6.small-12.columns.footer-nav-block
 			.footer-nav
-				- var list = [{ name : 'Home', data : 'index.html'}, { name : 'News', data : '#' }, { name : 'Murals', data : 'mural-list.html' },{ name : 'Event', data : 'event-list.html' }]
+				- var list = [{ name : 'Home', data : 'index.html'}, { name : 'Murals', data : 'mural-list.html' },{ name : 'Festivals', data : 'index-festival.html' },{ name : 'Participants', data : 'participants.html'}, { name : 'Location', data : 'location.html' },{ name : 'About', data : '#' }]
 						each item in list
 							div: a(href=item.data).linkFade=item.name
-			.footer-nav
-				- var list = [{ name : 'Participants', data : 'participants.html'}, { name : 'Location', data : 'location.html' },{ name : 'About', data : '#' }]
-						each item in list
-							div: a(href=item.data).linkFade=item.name
+			//- .footer-nav
+			//- 	- var list = []
+			//- 			each item in list
+			//- 				div: a(href=item.data).linkFade=item.name
 		.medium-3.small-12.columns
 			.footer-social
 				p.footer-title SOCIAL
