--- a/jade/location.jade
+++ b/jade/location.jade
@@ -251,12 +251,11 @@ html.no-js
 				}
 			});
 	body
-		.loader
-			.circle
-			.circle-small
-			.circle-big
-			.circle-inner-inner
-			.circle-inner
+		.loader-bg
+			.spinner
+				.bounce1
+				.bounce2
+				.bounce3
 		.wrapper
 			include component/header.jade
 			.content.padding-column.p-bottom-50
