--- a/jade/participants.jade
+++ b/jade/participants.jade
@@ -148,12 +148,11 @@ html.no-js
 				
 			});
 	body
-		.loader
-			.circle
-			.circle-small
-			.circle-big
-			.circle-inner-inner
-			.circle-inner
+		.loader-bg
+			.spinner
+				.bounce1
+				.bounce2
+				.bounce3
 		.wrapper
 			include component/header.jade
 			.content
