--- a/jade/powwow2015.jade
+++ b/jade/powwow2015.jade
@@ -309,12 +309,11 @@ html.no-js
 				};
 			});
 	body
-		.loader
-			.circle
-			.circle-small
-			.circle-big
-			.circle-inner-inner
-			.circle-inner
+		.loader-bg
+			.spinner
+				.bounce1
+				.bounce2
+				.bounce3
 		.wrapper
 			include component/header.jade
 			//- .banner(style="background-image: url(img/banner2.jpg);")
