--- a/scss/module/_select.scss
+++ b/scss/module/_select.scss
@@ -1,7 +1,20 @@
-
+.lang-box-wrapper {
+	position: absolute;
+	top: 6px;
+	right: 65px;
+	.cs-skin-underline {
+		.cs-options {
+			background: rgba(0, 0, 0, 0.75);
+		}
+		// ul span {
+		// 	color: #333;
+		// }
+	}
+}
 .lang-select-box {
-	padding: 0 7em 0 0;
+	padding: 0;
 	text-align: right;
+	max-width: 70px;
 }
 div.cs-select {
 	display: inline-block;
